--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                                 <img 
                                     src={`assets/img/${name}.jpg`}
                                     alt={name}
-                                    className="w-full h-full object-cover rounded-lg"
+                                    className="w-full h-[300px] md:h-full object-cover rounded-lg"
                                     onError={(e) => {
                                         e.target.onerror = null;
                                         e.target.src = 'https://i.pinimg.com/736x/1b/2e/31/1b2e314e767a957a44ed8f992c6d9098.jpg';
@@ -747,8 +747,8 @@
 
                     {/* Reddit Posts - Full Width Section */}
                     <div className="mt-8">
-                        <div className="bg-dark-card rounded-lg border border-gray-800 p-6">
-                            <div className="aspect-video w-full">
+                        <div className="bg-dark-card rounded-lg border border-gray-800 p-4 md:p-6">
+                            <div className="w-full h-[400px] md:h-[600px]">
                                 <iframe
                                     src={`https://www.redditpx.com/r/${name.replace(/\s+/g, '')}`}
                                     className="w-full h-full rounded-lg"
@@ -1353,7 +1353,7 @@
                     <div className="grid md:grid-cols-3 gap-6">
                         {/* Left Image */}
                         <div className="bg-dark-card rounded-lg border border-gray-800 p-4 flex flex-col">
-                            <div className="flex-1">
+                            <div className="flex-1 h-[300px] md:h-auto">
                                 <img 
                                     src={`assets/img/${celeb1}.jpg`}
                                     alt={celeb1}
@@ -1477,7 +1477,7 @@
 
                         {/* Right Image */}
                         <div className="bg-dark-card rounded-lg border border-gray-800 p-4 flex flex-col">
-                            <div className="flex-1">
+                            <div className="flex-1 h-[300px] md:h-auto">
                                 <img 
                                     src={`assets/img/${celeb2}.jpg`}
                                     alt={celeb2}
@@ -1523,8 +1523,8 @@
 
                     {/* Reddit Posts */}
                     <div className="mt-6">
-                        <div className="bg-dark-card rounded-lg border border-gray-800 p-6">
-                            <div className="aspect-video w-full">
+                        <div className="bg-dark-card rounded-lg border border-gray-800 p-4 md:p-6">
+                            <div className="w-full h-[400px] md:h-[600px]">
                                 <iframe
                                     src={`https://www.redditpx.com/r/CelebBattles/search?q=${encodeURIComponent(celeb1)}+vs+${encodeURIComponent(celeb2)}&restrict_sr=on&include_over_18=on&sort=relevance&t=all`}
                                     className="w-full h-full rounded-lg"
@@ -1660,17 +1660,17 @@
                                     : 'header-top'
                             }`}
                         >
-                            <div className="max-w-7xl mx-auto py-4 px-4">
+                            <div className="max-w-7xl mx-auto py-2 md:py-4 px-2 md:px-4">
                                 <div className="flex justify-center items-center">
-                                    <nav className="flex flex-wrap justify-center items-center gap-2 sm:gap-6">
+                                    <nav className="flex flex-wrap justify-center items-center gap-1 sm:gap-2 md:gap-6">
                                         <button
-                                            className="px-3 py-2 text-sm sm:text-base text-white hover:text-gray-200 transition-colors uppercase-force"
+                                            className="px-2 md:px-3 py-1 md:py-2 text-xs sm:text-sm md:text-base text-white hover:text-gray-200 transition-colors uppercase-force"
                                             onClick={() => handleNavigation('/')}
                                         >
                                             Home
                                         </button>
                                         <button
-                                            className="px-3 py-2 text-sm sm:text-base text-white hover:text-gray-200 transition-colors uppercase-force"
+                                            className="px-2 md:px-3 py-1 md:py-2 text-xs sm:text-sm md:text-base text-white hover:text-gray-200 transition-colors uppercase-force"
                                             onClick={() => handleNavigation('?page=leaderboard')}
                                         >
                                             Leaderboard
@@ -1679,7 +1679,7 @@
                                             href="https://reddit.com/r/CelebBattles"
                                             target="_blank"
                                             rel="noopener noreferrer"
-                                            className="px-3 py-2 text-sm sm:text-base text-white hover:text-gray-200 transition-colors uppercase-force"
+                                            className="px-2 md:px-3 py-1 md:py-2 text-xs sm:text-sm md:text-base text-white hover:text-gray-200 transition-colors uppercase-force"
                                         >
                                             Reddit
                                         </a>
@@ -1688,7 +1688,7 @@
                                 </div>
                             </div>
                         </header>
-                        <main className="pt-16">
+                        <main className="pt-12 md:pt-16">
                             <Router>
                                 {(path) => {
                                     const params = new URLSearchParams(path);
