--- a/index.html
+++ b/index.html
@@ -1002,6 +1002,48 @@
             );
         };
 
+        const formatTimeAgo = (timestamp) => {
+            const now = Math.floor(Date.now() / 1000);
+            const diff = now - timestamp;
+
+            // Convert to absolute value in case the timestamp is slightly ahead
+            const absDiff = Math.abs(diff);
+
+            if (absDiff < 60) {
+                return 'just now';
+            } else if (absDiff < 3600) {
+                const minutes = Math.floor(absDiff / 60);
+                return `${minutes} ${minutes === 1 ? 'minute' : 'minutes'} ago`;
+            } else if (absDiff < 86400) {
+                const hours = Math.floor(absDiff / 3600);
+                return `${hours} ${hours === 1 ? 'hour' : 'hours'} ago`;
+            } else {
+                const days = Math.floor(absDiff / 86400);
+                return `${days} ${days === 1 ? 'day' : 'days'} ago`;
+            }
+        };
+
+        const LastUpdated = () => {
+            const [lastUpdated, setLastUpdated] = React.useState(null);
+
+            React.useEffect(() => {
+                fetch('./metadata.json')
+                    .then(response => response.json())
+                    .then(data => {
+                        setLastUpdated(data.lastUpdated);
+                    })
+                    .catch(error => console.error('Error fetching metadata:', error));
+            }, []);
+
+            if (!lastUpdated) return null;
+
+            return (
+                <div className="text-sm text-gray-400 mb-4">
+                    Last updated: {formatTimeAgo(lastUpdated)}
+                </div>
+            );
+        };
+
         const Leaderboard = () => {
             const [celebs, setCelebs] = React.useState([]);
             const [loading, setLoading] = React.useState(true);
@@ -1066,7 +1108,10 @@
 
             return (
                 <div className="py-8 px-4 max-w-7xl mx-auto">
-                    <h2 className="text-xl sm:text-2xl font-normal text-left mb-6 text-white uppercase-force pl-4">Leaderboard</h2>
+                    <div className="mb-6">
+                        <h2 className="text-xl sm:text-2xl font-normal text-white uppercase-force mb-2">Leaderboard</h2>
+                        <LastUpdated />
+                    </div>
                     
                     {/* Table Container */}
                     <div className="overflow-x-auto -mx-4 sm:mx-0">
